# testCmake

./: CMakeLists.txt  main.cpp
Linux/: func.cpp  func.h
Windows/: func.cpp  func.h
